Fix z-index with datepicker and make toastrs longer

--- a/app/assets/stylesheets/bootstrap-datepicker.scss
+++ b/app/assets/stylesheets/bootstrap-datepicker.scss
@@ -482,7 +482,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 1000;
+  z-index: 1;
   float: left;
   display: none;
   min-width: 160px;
@@ -509,4 +509,8 @@
 .datepicker.dropdown-menu th,
 .datepicker.dropdown-menu td {
   padding: 4px 5px;
+}
+#start_date {
+  z-index: 1000;
+  position: relative;
 }
